syntax = "proto3";
package plugin.notification.v1;

service Notification {
  // SendNotification sends a notification to the specified recipients
  rpc Send(SendRequest) returns (SendResponse);
}

message SendRequest {
  NotificationType notification_type = 1; // Type of notification (e.g., Email, Text, Web)
  repeated string recipients = 2; // List of recipient addresses
  string subject = 3; // Subject of the notification
  string body = 4; // Body of the notification (HTML or Raw)
}

enum NotificationType {
  UNSPECIFIED = 0; // Unspecified notification type
  EMAIL = 1; // Email notification
  TEXT = 2; // Text message notification
  WEB = 3; // Web notification
}

message SendResponse {
  bool success = 1; // Indicates if the notification was sent successfully
  string message = 2; // Additional message or error details
}
