syntax = "proto3";
package plugin.system_information.v1;

import "buf/validate/validate.proto";

service SystemInformation {
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse);
}

message GetInfoRequest {
  string id = 1 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 3
  ];

  string type = 2 [
    (buf.validate.field).required = true,
    (buf.validate.field).string.min_len = 3
  ];
}

message GetInfoResponse {
  map<string, string> metadata = 1;
}

