syntax = "proto3";
package plugin.systeminformation.v1;

import "buf/validate/validate.proto";

service SystemInformationService {
  rpc Get(GetRequest) returns (GetResponse);
}

message GetRequest {
  string id = 1 [(buf.validate.field).required = true];
  RequestType type = 2;
}

message GetResponse {
  map<string, string> metadata = 1;
}
